--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 			<div class="row">
 				<div class="col-lg-4 col-md-6">
 					<a href="https://www.tel-tec.com/contact"><div class='img-container'>
-						<img src="images/home/commercial.png" alt="Commercial security" />
+						<img src="images/commercial.png" alt="Commercial security" />
 						<div class='img-footer'>
 							<p class="image-text">Commercial</p>
 						</div>
@@ -121,7 +121,7 @@
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<a href="https://www.tel-tec.com/contact"><div class='img-container'>
-						<img src="images/home/health.png" alt="" />
+						<img src="images/health.png" alt="" />
 						<div class='img-footer'>
 							<p class="image-text">Health Care</p>
 						</div>
@@ -129,7 +129,7 @@
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<a href="https://www.tel-tec.com/contact"><div class='img-container'>
-						<img src="images/home/agriculture.png" alt="" />
+						<img src="images/agriculture.png" alt="" />
 						<div class='img-footer'>
 							<p class="image-text">Agriculture</p>
 						</div></a>
@@ -137,7 +137,7 @@
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<a href="https://www.tel-tec.com/contact"><div class='img-container'>
-						<img src="images/home/education.png" alt="" />
+						<img src="images/education.png" alt="" />
 						<div class='img-footer'>
 							<p class="image-text">Education</p>
 						</div></a>
@@ -145,7 +145,7 @@
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<a href="https://www.tel-tec.com/contact"><div class='img-container'>
-						<img src="images/home/diy.png" alt="" />
+						<img src="images/diy.png" alt="" />
 						<div class='img-footer'>
 							<p class="image-text">DIY</p>
 						</div></a>
@@ -153,7 +153,7 @@
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<a href="https://www.tel-tec.com/contact"><div class='img-container'>
-						<img src="images/home/government.png" alt="" />
+						<img src="images/government.png" alt="" />
 						<div class='img-footer'>
 							<p class="image-text">Government</p>
 						</div>
@@ -161,7 +161,7 @@
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<a href="https://www.tel-tec.com/contact"><div class='img-container'>
-						<img src="images/home/energy.png" alt="" />
+						<img src="images/energy.png" alt="" />
 						<div class='img-footer'>
 							<p class="image-text">Energy</p>
 						</div>
@@ -169,7 +169,7 @@
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<a href="home-security.html"><div class='img-container'>
-						<img src="images/home/residential.png" alt="" />
+						<img src="images/residential.png" alt="" />
 						<div class='img-footer'>
 							<p class="image-text">Residential Monitoring</p>
 						</div></a>
@@ -177,7 +177,7 @@
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<a href="https://www.tel-tec.com/contact"><div class='img-container'>
-						<img src="images/home/monitoring.png" alt="" />
+						<img src="images/monitoring.png" alt="" />
 						<div class='img-footer'>
 							<p class="image-text">Commercial Monitoring</p>
 						</div></a>
