--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<a href="https://www.tel-tec.com/contact"><div class='img-container'>
-						<img src="images/health.png" alt="" />
+						<img src="images/health.png" alt="health care security" />
 						<div class='img-footer'>
 							<p class="image-text">Health Care</p>
 						</div>
@@ -129,7 +129,7 @@
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<a href="https://www.tel-tec.com/contact"><div class='img-container'>
-						<img src="images/agriculture.png" alt="" />
+						<img src="images/agriculture.png" alt="agriculture security" />
 						<div class='img-footer'>
 							<p class="image-text">Agriculture</p>
 						</div></a>
@@ -137,7 +137,7 @@
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<a href="https://www.tel-tec.com/contact"><div class='img-container'>
-						<img src="images/education.png" alt="" />
+						<img src="images/education.png" alt="education security" />
 						<div class='img-footer'>
 							<p class="image-text">Education</p>
 						</div></a>
@@ -145,7 +145,7 @@
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<a href="https://www.tel-tec.com/contact"><div class='img-container'>
-						<img src="images/diy.png" alt="" />
+						<img src="images/diy.png" alt="do it yourself security" />
 						<div class='img-footer'>
 							<p class="image-text">DIY</p>
 						</div></a>
@@ -153,7 +153,7 @@
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<a href="https://www.tel-tec.com/contact"><div class='img-container'>
-						<img src="images/government.png" alt="" />
+						<img src="images/government.png" alt="government security" />
 						<div class='img-footer'>
 							<p class="image-text">Government</p>
 						</div>
@@ -161,7 +161,7 @@
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<a href="https://www.tel-tec.com/contact"><div class='img-container'>
-						<img src="images/energy.png" alt="" />
+						<img src="images/energy.png" alt="energy systems security" />
 						<div class='img-footer'>
 							<p class="image-text">Energy</p>
 						</div>
@@ -169,7 +169,7 @@
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<a href="home-security.html"><div class='img-container'>
-						<img src="images/residential.png" alt="" />
+						<img src="images/residential.png" alt="residential security" />
 						<div class='img-footer'>
 							<p class="image-text">Residential Monitoring</p>
 						</div></a>
@@ -177,7 +177,7 @@
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<a href="https://www.tel-tec.com/contact"><div class='img-container'>
-						<img src="images/monitoring.png" alt="" />
+						<img src="images/monitoring.png" alt="monitoring security" />
 						<div class='img-footer'>
 							<p class="image-text">Commercial Monitoring</p>
 						</div></a>
@@ -191,19 +191,19 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-3 col-6 text-center mb-3">
-					<img src="images/home/cms.png" alt="">
+					<img src="images/home/cms.png" alt="cms security">
 				</div>
 
 				<div class="col-lg-3 col-6 text-center mb-3">
-					<img src="images/home/cmas.png" alt="">
+					<img src="images/home/cmas.png" alt="cmas security">
 				</div>
 
 				<div class="col-lg-3 col-6 text-center mb-3">
-					<img src="images/home/gsa.png" alt="">
+					<img src="images/home/gsa.png" alt="gsa security">
 				</div>
 
 				<div class="col-lg-3 col-6 text-center mb-3">
-					<a href="https://www.bbb.org/us/ca/bakersfield/profile/burglar-alarm-systems/tel-tec-security-systems-inc-1066-80000799"><img src="images/home/bbb.png" alt=""></a>
+					<a href="https://www.bbb.org/us/ca/bakersfield/profile/burglar-alarm-systems/tel-tec-security-systems-inc-1066-80000799"><img src="images/home/bbb.png" alt="security made easy"></a>
 				</div>
 			</div>
 		</div>
