--- a/index.html
+++ b/index.html
@@ -112,44 +112,44 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-4 col-md-6">
-					<a href="https://www.tel-tec.com/contact"><div class='img-container'>
+					<a href="https://www.tel-tec.com/contact">< class='img-container'>
 						<img src="images/commercial.png" alt="Commercial security" />
 						<div class='img-footer'>
 							<p class="image-text">Commercial</p>
 						</div>
-					</div></a>
+					</a>
 				</div>
 				<div class="col-lg-4 col-md-6">
-					<a href="https://www.tel-tec.com/contact"><div class='img-container'>
+					<a href="https://www.tel-tec.com/contact">< class='img-container'>
 						<img src="images/health.png" alt="health care security" />
 						<div class='img-footer'>
 							<p class="image-text">Health Care</p>
 						</div>
-					</div></a>
+					</a>
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<a href="https://www.tel-tec.com/contact"><div class='img-container'>
 						<img src="images/agriculture.png" alt="agriculture security" />
 						<div class='img-footer'>
 							<p class="image-text">Agriculture</p>
-						</div></a>
-					</div>
+						</div>
+					</a>
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<a href="https://www.tel-tec.com/contact"><div class='img-container'>
 						<img src="images/education.png" alt="education security" />
 						<div class='img-footer'>
 							<p class="image-text">Education</p>
-						</div></a>
-					</div>
+						</div>
+					</a>
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<a href="https://www.tel-tec.com/contact"><div class='img-container'>
 						<img src="images/diy.png" alt="do it yourself security" />
 						<div class='img-footer'>
 							<p class="image-text">DIY</p>
-						</div></a>
-					</div>
+						</div>
+					</a>
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<a href="https://www.tel-tec.com/contact"><div class='img-container'>
@@ -157,7 +157,7 @@
 						<div class='img-footer'>
 							<p class="image-text">Government</p>
 						</div>
-					</div></a>
+					</a>
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<a href="https://www.tel-tec.com/contact"><div class='img-container'>
@@ -165,23 +165,23 @@
 						<div class='img-footer'>
 							<p class="image-text">Energy</p>
 						</div>
-					</div></a>
+					</a>
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<a href="home-security.html"><div class='img-container'>
 						<img src="images/residential.png" alt="residential security" />
 						<div class='img-footer'>
 							<p class="image-text">Residential Monitoring</p>
-						</div></a>
-					</div>
+						</div>	
+					</a>
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<a href="https://www.tel-tec.com/contact"><div class='img-container'>
 						<img src="images/monitoring.png" alt="monitoring security" />
 						<div class='img-footer'>
 							<p class="image-text">Commercial Monitoring</p>
-						</div></a>
-					</div>
+						</div>
+					</a>
 				</div>
 			</div>
 		</div>
