--- a/index.html
+++ b/index.html
@@ -112,72 +112,88 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-4 col-md-6">
-					<a href="https://www.tel-tec.com/contact">< class='img-container'>
-						<img src="images/commercial.png" alt="Commercial security" />
+					<a href="https://www.tel-tec.com/contact">
+						<div class='img-container'>
+						<img src="images/healthy.jpg" alt="Commercial security" />
 						<div class='img-footer'>
 							<p class="image-text">Commercial</p>
 						</div>
+						</div>
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-6">
-					<a href="https://www.tel-tec.com/contact">< class='img-container'>
-						<img src="images/health.png" alt="health care security" />
+					<a href="https://www.tel-tec.com/contact">
+						<div class='img-container'>
+						<img src="images/healthy.jpg" alt="health care security" />
 						<div class='img-footer'>
 							<p class="image-text">Health Care</p>
 						</div>
+						</div>
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-6">
-					<a href="https://www.tel-tec.com/contact"><div class='img-container'>
-						<img src="images/agriculture.png" alt="agriculture security" />
+					<a href="https://www.tel-tec.com/contact">
+						<div class='img-container'>
+						<img src="images/healthy.jpg" alt="agriculture security" />
 						<div class='img-footer'>
 							<p class="image-text">Agriculture</p>
 						</div>
+						</div>
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-6">
-					<a href="https://www.tel-tec.com/contact"><div class='img-container'>
-						<img src="images/education.png" alt="education security" />
+					<a href="https://www.tel-tec.com/contact">
+						<div class='img-container'>
+						<img src="images/healthy.jpg" alt="education security" />
 						<div class='img-footer'>
 							<p class="image-text">Education</p>
 						</div>
+						</div>
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-6">
-					<a href="https://www.tel-tec.com/contact"><div class='img-container'>
-						<img src="images/diy.png" alt="do it yourself security" />
+					<a href="https://www.tel-tec.com/contact">
+						<div class='img-container'>
+						<img src="images/healthy.jpg" alt="do it yourself security" />
 						<div class='img-footer'>
 							<p class="image-text">DIY</p>
 						</div>
+						</div>
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-6">
-					<a href="https://www.tel-tec.com/contact"><div class='img-container'>
-						<img src="images/government.png" alt="government security" />
+					<a href="https://www.tel-tec.com/contact">
+						<div class='img-container'>
+						<img src="images/healthy.jpg" alt="government security" />
 						<div class='img-footer'>
 							<p class="image-text">Government</p>
 						</div>
-					</a>
-				</div>
-				<div class="col-lg-4 col-md-6">
-					<a href="https://www.tel-tec.com/contact"><div class='img-container'>
-						<img src="images/energy.png" alt="energy systems security" />
-						<div class='img-footer'>
-							<p class="image-text">Energy</p>
 						</div>
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-6">
-					<a href="home-security.html"><div class='img-container'>
-						<img src="images/residential.png" alt="residential security" />
+					<a href="https://www.tel-tec.com/contact">
+						<div class='img-container'>
+						<img src="images/healthy.jpg" alt="energy systems security" />
+						<div class='img-footer'>
+							<p class="image-text">Energy</p>
+						</div>
+						</div>
+					</a>
+				</div>
+				<div class="col-lg-4 col-md-6">
+					<a href="home-security.html">
+						<div class='img-container'>
+						<img src="images/healthy.jpg" alt="residential security" />
 						<div class='img-footer'>
 							<p class="image-text">Residential Monitoring</p>
 						</div>	
+						</div>
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<a href="https://www.tel-tec.com/contact"><div class='img-container'>
-						<img src="images/monitoring.png" alt="monitoring security" />
+						<img src="images/healthy.jpg" alt="monitoring security" />
 						<div class='img-footer'>
 							<p class="image-text">Commercial Monitoring</p>
 						</div>
