images and footer

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 				<div class="col-lg-4 col-md-6">
 					<a href="https://www.tel-tec.com/contact">
 						<div class='img-container'>
-						<img src="images/commercial.jpg" alt="health care security" />
+						<img src="images/health.jpg" alt="health care security" />
 						<div class='img-footer'>
 							<p class="image-text">Health Care</p>
 						</div>
@@ -134,7 +134,7 @@
 				<div class="col-lg-4 col-md-6">
 					<a href="https://www.tel-tec.com/contact">
 						<div class='img-container'>
-						<img src="images/commercial.jpg" alt="agriculture security" />
+						<img src="images/agriculture.jpg" alt="agriculture security" />
 						<div class='img-footer'>
 							<p class="image-text">Agriculture</p>
 						</div>
@@ -144,7 +144,7 @@
 				<div class="col-lg-4 col-md-6">
 					<a href="https://www.tel-tec.com/contact">
 						<div class='img-container'>
-						<img src="images/commercial.jpg" alt="education security" />
+						<img src="images/education.jpg" alt="education security" />
 						<div class='img-footer'>
 							<p class="image-text">Education</p>
 						</div>
@@ -154,7 +154,7 @@
 				<div class="col-lg-4 col-md-6">
 					<a href="https://www.tel-tec.com/contact">
 						<div class='img-container'>
-						<img src="images/commercial.jpg" alt="do it yourself security" />
+						<img src="images/diy.jpg" alt="do it yourself security" />
 						<div class='img-footer'>
 							<p class="image-text">DIY</p>
 						</div>
@@ -164,7 +164,7 @@
 				<div class="col-lg-4 col-md-6">
 					<a href="https://www.tel-tec.com/contact">
 						<div class='img-container'>
-						<img src="images/commercial.jpg" alt="government security" />
+						<img src="images/government.jpg" alt="government security" />
 						<div class='img-footer'>
 							<p class="image-text">Government</p>
 						</div>
@@ -174,7 +174,7 @@
 				<div class="col-lg-4 col-md-6">
 					<a href="https://www.tel-tec.com/contact">
 						<div class='img-container'>
-						<img src="images/commercial.jpg" alt="energy systems security" />
+						<img src="images/energy.jpg" alt="energy systems security" />
 						<div class='img-footer'>
 							<p class="image-text">Energy</p>
 						</div>
@@ -184,7 +184,7 @@
 				<div class="col-lg-4 col-md-6">
 					<a href="home-security.html">
 						<div class='img-container'>
-						<img src="images/commercial.jpg" alt="residential security" />
+						<img src="images/residential.jpg" alt="residential security" />
 						<div class='img-footer'>
 							<p class="image-text">Residential Monitoring</p>
 						</div>	
@@ -193,7 +193,7 @@
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<a href="https://www.tel-tec.com/contact"><div class='img-container'>
-						<img src="images/commercial.jpg" alt="monitoring security" />
+						<img src="images/monitoring.jpg" alt="monitoring security" />
 						<div class='img-footer'>
 							<p class="image-text">Commercial Monitoring</p>
 						</div>
