--- a/footer.html
+++ b/footer.html
@@ -69,19 +69,19 @@
 			<div class="container">
 			<div class="row footer-icon">
 			  <div class="col-lg-3 col-6 text-center mb-3">
-				  <img src="images/home/cms.png" alt="">
+				  <img src="images/cms.png" alt="">
 			  </div>
   
 			  <div class="col-lg-3 col-6 text-center mb-3">
-				  <img src="images/home/cmas.png" alt="">
+				  <img src="images/cmas.png" alt="">
 			  </div>
   
 			  <div class="col-lg-3 col-6 text-center mb-3">
-				  <img src="images/home/gsa.png" alt="">
+				  <img src="images/gsa.png" alt="">
 			  </div>
   
 			  <div class="col-lg-3 col-6 text-center mb-3">
-				  <a href="https://www.bbb.org/us/ca/bakersfield/profile/burglar-alarm-systems/tel-tec-security-systems-inc-1066-80000799"><img src="images/home/bbb.png" alt=""></a>
+				  <a href="https://www.bbb.org/us/ca/bakersfield/profile/burglar-alarm-systems/tel-tec-security-systems-inc-1066-80000799"><img src="images/bbb.png" alt=""></a>
 			  </div>
 		  </div>
 		  </div>
