3 pages and links

--- a/header.html
+++ b/header.html
@@ -57,6 +57,9 @@
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="contact.html">Contact Us</a>
                         <a class="dropdown-item" href="about-us.html">About Us</a>
+                        <a class="dropdown-item" href="community.html">Serving Community</a>
+                        <a class="dropdown-item" href="associations.html">Associations</a>
+                        <a class="dropdown-item" href="guarantee.html">Customer Guarantee</a>
                     </div>
                 </li>
             </ul>
@@ -170,6 +173,9 @@
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="contact.html">Contact Us</a>
                     <a class="dropdown-item" href="about-us.html">About Us</a>
+                    <a class="dropdown-item" href="community.html">Serving Community</a>
+                    <a class="dropdown-item" href="associations.html">Associations</a>
+                    <a class="dropdown-item" href="guarantee.html">Customer Guarantee</a>
                 </div>
             </li>
         </ul>
