--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-4 col-md-6">
-					<a href="https://www.tel-tec.com/contact">
+					<a href="commercial.html">
 						<div class='img-container'>
 						<img src="images/commercial.jpg" alt="Commercial security" />
 						<div class='img-footer'>
@@ -122,7 +122,7 @@
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-6">
-					<a href="https://www.tel-tec.com/contact">
+					<a href="healthcare.html">
 						<div class='img-container'>
 						<img src="images/health.jpg" alt="health care security" />
 						<div class='img-footer'>
@@ -132,7 +132,7 @@
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-6">
-					<a href="https://www.tel-tec.com/contact">
+					<a href="agriculture.html">
 						<div class='img-container'>
 						<img src="images/agriculture.jpg" alt="agriculture security" />
 						<div class='img-footer'>
@@ -142,7 +142,7 @@
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-6">
-					<a href="https://www.tel-tec.com/contact">
+					<a href="education.html">
 						<div class='img-container'>
 						<img src="images/education.jpg" alt="education security" />
 						<div class='img-footer'>
@@ -152,7 +152,7 @@
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-6">
-					<a href="https://www.tel-tec.com/contact">
+					<a href="#">
 						<div class='img-container'>
 						<img src="images/diy.jpg" alt="do it yourself security" />
 						<div class='img-footer'>
@@ -162,7 +162,7 @@
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-6">
-					<a href="https://www.tel-tec.com/contact">
+					<a href="government.html">
 						<div class='img-container'>
 						<img src="images/government.jpg" alt="government security" />
 						<div class='img-footer'>
@@ -172,7 +172,7 @@
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-6">
-					<a href="https://www.tel-tec.com/contact">
+					<a href="#">
 						<div class='img-container'>
 						<img src="images/energy.jpg" alt="energy systems security" />
 						<div class='img-footer'>
@@ -192,7 +192,7 @@
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-6">
-					<a href="https://www.tel-tec.com/contact"><div class='img-container'>
+					<a href="commercial.html"><div class='img-container'>
 						<img src="images/monitoring.jpg" alt="monitoring security" />
 						<div class='img-footer'>
 							<p class="image-text">Commercial Monitoring</p>
