--- a/header.html
+++ b/header.html
@@ -57,6 +57,8 @@
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="contact.html">Contact Us</a>
                         <a class="dropdown-item" href="about-us.html">About Us</a>
+                        <a class="dropdown-item" href="leadership.html">Leadership</a>
+                        <a class="dropdown-item" href="sales-team.html">Sales Team</a>
                         <a class="dropdown-item" href="community.html">Serving Community</a>
                         <a class="dropdown-item" href="associations.html">Associations</a>
                         <a class="dropdown-item" href="guarantee.html">Customer Guarantee</a>
@@ -173,6 +175,8 @@
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="contact.html">Contact Us</a>
                     <a class="dropdown-item" href="about-us.html">About Us</a>
+                    <a class="dropdown-item" href="leadership.html">Leadership</a>
+                    <a class="dropdown-item" href="sales-team.html">Sales Team</a>
                     <a class="dropdown-item" href="community.html">Serving Community</a>
                     <a class="dropdown-item" href="associations.html">Associations</a>
                     <a class="dropdown-item" href="guarantee.html">Customer Guarantee</a>
