--- a/associations.html
+++ b/associations.html
@@ -76,12 +76,18 @@
 		<div class="container-fluid">
             <div class="row generic">
               <div class="col-sm-4 side-nav">
-                  <div class="well well-lg">
-					  <h4 class="side-bar">Know Your Options</h4>
-					  <p><b>OFF-HOUR MONITORING OF SCHOOL SITES</b></p>
-                      <p>Tel-Tec offers programs to insure your school facilities are safeguarded, anytime of the day, night, weekend, and vacation periods. From protecting property (such as vending machines) to assuring public safety, we understand the special demands of school safety and security.
-					  </p>
-                  </div>
+				<div class="well well-lg">
+					<h4 class="side-bar">Contact</h4>
+					<p><b>CEO / President</b></p>
+					<p>Morgan Clayton
+					</p>
+					<p>Call: (661)397-5511</p>
+
+					<p><b>GSA Project Coordinator</b></p>
+					<p>Alicia Ashurst
+					</p>
+					<p>Call: (661)397-5511</p>
+				</div>
                
               </div>
           
