--- a/commercial.html
+++ b/commercial.html
@@ -76,16 +76,11 @@
             <div class="row generic">
               <div class="col-sm-4 side-nav">
                   <div class="well well-lg">
-					  <h4 class="side-bar">Know Your Options</h4>
-					  <p><b>NOT ALL SECURITY SYSTEMS ARE CREATED EQUAL!</b></p>
-                      <p>A Tel-Tec security system is designed to meet your needs and assure your safety. 
-						 Ask us how we can provide you with a system that will:
+					  <h4 class="side-bar">KNOW YOUR OPTIONS</h4>
+					  <p><b>MORE THAN ONE RETAIL LOCATION?</b></p>
+					  <p><b>Monitor your operation via off-site video!</b></p>
+                      <p>Want to keep an eye on things when you're not there? Ask us about our video systems that allow you to keep a close eye on your store(s) via online access from remote locations. Call us for a needs analysis!
 					  </p>
-					  <ul>
-						  <li>minimize false alarms</li>
-						  <li>minimize false alarms</li>
-						  <li>work best for your home and family</li>
-					  </ul>
                   </div>
                 <!-- <h4>John's Blog</h4>
                 <ul class="nav nav-pills nav-stacked">
@@ -117,10 +112,10 @@
 				<ul>
 					<!-- <a href="#"><li>Industrial Business</li></a> -->
                     <!-- <a href="#"><li>Commercial Business</li></a> -->
-                    <a href="#"><li>Education</li></a>
-					<a href="#"><li>Health Care Facilities</li></a>
+                    <a href="education.html"><li>Education</li></a>
+					<a href="healthcare.html"><li>Health Care Facilities</li></a>
 					<a href="#"><li>Energy</li></a>
-					<a href="#"><li>Agriculture</li></a>
+					<a href="agriculture.html"><li>Agriculture</li></a>
 					<a href="#"><li>DIY</li></a>
 					<!-- <a href="#"><li>Financing Program</li></a> -->
 				</ul>
