--- a/contract-vehicles.html
+++ b/contract-vehicles.html
@@ -90,18 +90,17 @@
 					  </p>
 					  <ul>
 						  <li>minimize false alarms</li>
-						  <li>minimize false alarms</li>
+						  <li>maximize insurance discounts</li>
 						  <li>work best for your home and family</li>
 					  </ul>
 				  </div>
 				  <div class="well well-lg">
 					<h4 class="side-bar">Areas Within Government Security</h4>
 					<ul>
-						<li><a href="../government/solutions.html" title="Government Security Solutions" >Solutions</a></li>
-						<li><a href="../government/contract-vehicles" title="Contract Vehicles" >Contract Vehicles</a></li>
-						<li><a href="../government/school-districts" title="California School Districts" >School Districts</a></li>
-						<li><a href="../government/security-safety" title="Security and Safety" >Security and Safety</a></li>
-						<li><a href="../government/partners" title="Partners and Certifications" >Partners-Certifications</a></li>
+						<li><a href="solutions.html" title="Government Security Solutions" >Solutions</a></li>
+						<li><a href="contract-vehicles.html" title="Contract Vehicles" >Contract Vehicles</a></li>
+						<li><a href="school-districts.html" title="California School Districts" >School Districts</a></li>
+						<li><a href="security-safety.html" title="Security and Safety" >Security and Safety</a></li>
 					</ul>
 				</div>
                 <!-- <h4>John's Blog</h4>
