--- a/home-security.html
+++ b/home-security.html
@@ -83,7 +83,7 @@
 					  </p>
 					  <ul>
 						  <li>minimize false alarms</li>
-						  <li>minimize false alarms</li>
+						  <li>maximize insurance discounts</li>
 						  <li>work best for your home and family</li>
 					  </ul>
                   </div>
