footer and img changes

--- a/footer.html
+++ b/footer.html
@@ -63,9 +63,11 @@
 		<div class="col-md-6 mt-md-0 mt-3">
   
 			<!-- Content -->
+			<div class="footer-content">
 			<h5 class="text-uppercase">Need Help?</h5>
 			<p>We're available 24/7 at 1-661-397-5511</p>
-  
+			</div>
+
 			<div class="container">
 			<div class="row footer-icon">
 			  <div class="col-lg-3 col-6 text-center mb-3">
@@ -73,7 +75,7 @@
 			  </div>
   
 			  <div class="col-lg-3 col-6 text-center mb-3">
-				  <img src="images/cmas.png" alt="">
+				  <img src="images/cmas.jpg" alt="">
 			  </div>
   
 			  <div class="col-lg-3 col-6 text-center mb-3">
