--- a/leadership.html
+++ b/leadership.html
@@ -90,7 +90,7 @@
                       <p>Call: (661)397-5511</p>
 
 					  <p><b>GSA Project Coordinator</b></p>
-                      <p>Alicia Ashurst
+                      <p>Office
                       </p>
                       <p>Call: (661)397-5511</p>
                   </div>
@@ -109,8 +109,8 @@
                         <!-- <img src="/images/staff/team-divider.jpg" alt="Divider"  class="team_divider"/> -->
 
                         <div class="text-center">
-                            <a href="#"><img src="/images/staff/Tasha-Clayton.jpg" alt="Tasha Clayton"/></a>
-                            <p><b>Tasha Clayton</b><br />General Manager<br/><a href="#">contact</a></p>
+                            <a href="/contact?contact=Tasha Clayton"><img src="/images/staff/Tasha-Clayton.jpg" alt="Tasha Clayton"/></a>
+                            <p><b>Tasha Clayton</b><br />General Manager<br/><a href="/contact?contact=Tasha Clayton">contact</a></p>
                         </div>
 
                         <hr>
@@ -118,16 +118,16 @@
                         <div class="">
                         <div class="cont-flex">
                             <div class="img-cont text-center">
-                                <a href="#"><img src="/images/staff/Owen-Freeman.jpg" alt="Owen Freeman"/></a>
-                                <p><b>Owen Freeman</b><br />Vice President of Technology<br/><a href="#">contact</a></p>
+                                <a href="/contact?contact=Owen Freeman"><img src="/images/staff/Owen-Freeman.jpg" alt="Owen Freeman"/></a>
+                                <p><b>Owen Freeman</b><br />Vice President of Technology<br/><a href="/contact?contact=Owen Freeman">contact</a></p>
                             </div>
                             <div class="img-cont text-center">
-                                <a href="#"><img src="/images/staff/Steve-Johnson.jpg" alt="Steve Johnson"/></a>
-                                <p><b>Steve Johnson</b><br />Director of Operations<br/><a href="#">contact</a></p>
+                                <a href="/contact?contact=Steve Johnson"><img src="/images/staff/Steve-Johnson.jpg" alt="Steve Johnson"/></a>
+                                <p><b>Steve Johnson</b><br />Director of Operations<br/><a href="/contact?contact=Steve Johnson">contact</a></p>
                             </div>
                             <div class="img-cont text-center">
-                                <a href="#"><img src="/images/staff/Tyson-Clayton.jpg" alt="Tyson Clayton"/></a>
-                                <p><b>Tyson Clayton</b><br />Vice President of R&D<br/><a href="#">contact</a></p>
+                                <a href="/contact?contact=Tyson Clayton"><img src="/images/staff/Tyson-Clayton.jpg" alt="Tyson Clayton"/></a>
+                                <p><b>Tyson Clayton</b><br />Vice President of R&D<br/><a href="/contact?contact=Tyson Clayton">contact</a></p>
                             </div>
                         </div>
 
@@ -136,16 +136,16 @@
 
                         <div class="cont-flex">
                             <div class="img-cont text-center">
-                                <a href="#"><img src="/images/staff/Hector-Caballero.jpg" alt="Hector Caballero"/></a>
-                                <p><b>Hector Caballero</b><br />Installation Manager<br/><a href="#">contact</a></p>
+                                <a href="/contact?contact=Hector Caballero"><img src="/images/staff/Hector-Caballero.jpg" alt="Hector Caballero"/></a>
+                                <p><b>Hector Caballero</b><br />Installation Manager<br/><a href="/contact?contact=Hector Caballero">contact</a></p>
                             </div>
                             <div class="img-cont text-center">
-                                <a href="#"><img src="/images/staff/Stefanie-Strader.jpg" alt="Stefanie Strader"/></a>
-                                <p><b>Stefanie Strader</b><br />Controller<br/><a href="#">contact</a></p>
+                                <a href="/contact?contact=Stefanie Strader"><img src="/images/staff/Stefanie-Strader.jpg" alt="Stefanie Strader"/></a>
+                                <p><b>Stefanie Strader</b><br />Controller<br/><a href="/contact?contact=Stefanie Strader">contact</a></p>
                             </div>
                             <div class="img-cont text-center">
-                                <a href="#"><img src="/images/staff/Kristi-Nunley.jpg" alt="Kristi Nunley"/></a>
-                                <p><b>Kristi Nunley</b><br />Administrative Manager<br/><a href="#">contact</a></p>
+                                <a href="/contact?contact=Kristi Nunley"><img src="/images/staff/Kristi-Nunley.jpg" alt="Kristi Nunley"/></a>
+                                <p><b>Kristi Nunley</b><br />Administrative Manager<br/><a href="/contact?contact=Kristi Nunley">contact</a></p>
                             </div>
                         </div>
                     </div>
