--- a/sales-team.html
+++ b/sales-team.html
@@ -83,7 +83,7 @@
                       <p>Call: (661)397-5511</p>
 
 					  <p><b>GSA Project Coordinator</b></p>
-                      <p>Alicia Ashurst
+                      <p>Office
                       </p>
                       <p>Call: (661)397-5511</p>
                   </div>
@@ -93,24 +93,24 @@
                 <h4 class="text-center"><small>Sales Team</small></h4>
                
                         <div class="text-center">
-                            <a href="#"><img src="/images/staff/Morgan-Clayton.jpg" alt="Morgan Clayton"/></a>
-                            <p><b>Morgan Clayton</b><br />President<br/><a href="#">contact</a></p>
+                            <a href="/contact?contact=Morgan Clayton"><img src="/images/staff/Morgan-Clayton.jpg" alt="Morgan Clayton"/></a>
+                            <p><b>Morgan Clayton</b><br />President<br/><a href="/contact?contact=Morgan Clayton">contact</a></p>
                         </div>
 
                         <hr>
                         
                         <div class="cont-flex">
                             <div class="img-cont text-center">
-                                <a href="#"><img src="/images/staff/Leslie-Kirkindoll.jpg" alt="Leslie-Kirkindoll"/></a>
-                                <p><b>Leslie Kirkindoll</b><br />Vice President of Technology<br/><a href="#">contact</a></p>
+                                <a href="/contact?contact=Leslie Kirkindoll"><img src="/images/staff/Leslie-Kirkindoll.jpg" alt="Leslie-Kirkindoll"/></a>
+                                <p><b>Leslie Kirkindoll</b><br />Vice President of Technology<br/><a href="/contact?contact=Leslie Kirkindoll">contact</a></p>
                             </div>
                             <div class="img-cont text-center">
-                                <a href="#"><img src="/images/staff/Chris-Clayton.jpg" alt="Chris Clayton"/></a>
-                                <p><b>Chris Clayton</b><br />Director of Operations<br/><a href="#">contact</a></p>
+                                <a href="/contact?contact=Chris Clayton"><img src="/images/staff/Chris-Clayton.jpg" alt="Chris Clayton"/></a>
+                                <p><b>Chris Clayton</b><br />Director of Operations<br/><a href="/contact?contact=Chris Clayton">contact</a></p>
                             </div>
                             <div class="img-cont text-center">
-                                <a href="#"><img src="/images/staff/Bruce-Clayton.jpg" alt="Bruce Clayton"/></a>
-                                <p><b>Bruce Clayton</b><br />Vice President of R&D<br/><a href="#">contact</a></p>
+                                <a href="/contact?contact=Bruce Clayton"><img src="/images/staff/Bruce-Clayton.jpg" alt="Bruce Clayton"/></a>
+                                <p><b>Bruce Clayton</b><br />Vice President of R&D<br/><a href="/contact?contact=Bruce Clayton">contact</a></p>
                             </div>
                         </div>
                 <hr>
