added more pages

--- a/contract-vehicles.html
+++ b/contract-vehicles.html
@@ -100,7 +100,8 @@
 						<li><a href="solutions.html" title="Government Security Solutions" >Solutions</a></li>
 						<li><a href="contract-vehicles.html" title="Contract Vehicles" >Contract Vehicles</a></li>
 						<li><a href="school-districts.html" title="California School Districts" >School Districts</a></li>
-						<li><a href="security-safety.html" title="Security and Safety" >Security and Safety</a></li>
+            <li><a href="security-safety.html" title="Security and Safety" >Security and Safety</a></li>
+            <li><a href="partners.html" title="Partners and Certifications" >Partners-Certifications</a></li>
 					</ul>
 				</div>
                 <!-- <h4>John's Blog</h4>
