--- a/footer.html
+++ b/footer.html
@@ -70,29 +70,29 @@
 
 			<div class="container">
 			<div class="row footer-icon">
-			  <div class="col-lg-3 col-6 text-center mb-3">
+			  <div class="col-lg-2 col-6 text-center mb-3">
 				  <img src="images/cms.png" alt="">
 			  </div>
-  
-			  <div class="col-lg-3 col-6 text-center mb-3">
-				  <img src="images/cmas.jpg" alt="">
+
+			  <div class="col-lg-2 col-6 text-center mb-3">
+				<img src="images/voip-trans-footer.png" alt="">
 			  </div>
   
-			  <div class="col-lg-3 col-6 text-center mb-3">
-				  <img src="images/gsa.png" alt="">
+			  <div class="col-lg-2 col-6 text-center mb-3">
+				  <img src="images/CMAS-trans-footer.png" alt="">
 			  </div>
   
-			  <div class="col-lg-3 col-6 text-center mb-3">
+			  <div class="col-lg-2 col-6 text-center mb-3">
+				  <img src="images/GSA-logo-trans-footer.png" alt="">
+			  </div>
+  
+			  <div class="col-lg-2 col-6 text-center mb-3">
 				  <a href="https://www.bbb.org/us/ca/bakersfield/profile/burglar-alarm-systems/tel-tec-security-systems-inc-1066-80000799"><img src="images/bbb.png" alt=""></a>
 			  </div>
 		  </div>
 		  </div>
-  
-  
 	
 		  </div>
-
-
 
 	  </div>
 	  <!-- Grid row -->
@@ -108,5 +108,3 @@
   
   </footer>
   <!-- Footer -->
-
-	<!-- Footer End-->
