--- a/sales-team.html
+++ b/sales-team.html
@@ -102,15 +102,15 @@
                         <div class="cont-flex">
                             <div class="img-cont text-center">
                                 <a href="/contact?contact=Leslie Kirkindoll"><img src="/images/staff/Leslie-Kirkindoll.jpg" alt="Leslie-Kirkindoll"/></a>
-                                <p><b>Leslie Kirkindoll</b><br />Vice President of Technology<br/><a href="/contact?contact=Leslie Kirkindoll">contact</a></p>
+                                <p><b>Leslie Kirkindoll</b><br />Security Sales Manager<br/><a href="/contact?contact=Leslie Kirkindoll">contact</a></p>
                             </div>
                             <div class="img-cont text-center">
                                 <a href="/contact?contact=Chris Clayton"><img src="/images/staff/Chris-Clayton.jpg" alt="Chris Clayton"/></a>
-                                <p><b>Chris Clayton</b><br />Director of Operations<br/><a href="/contact?contact=Chris Clayton">contact</a></p>
+                                <p><b>Chris Clayton</b><br />Security Sales Consultant<br/><a href="/contact?contact=Chris Clayton">contact</a></p>
                             </div>
                             <div class="img-cont text-center">
                                 <a href="/contact?contact=Bruce Clayton"><img src="/images/staff/Bruce-Clayton.jpg" alt="Bruce Clayton"/></a>
-                                <p><b>Bruce Clayton</b><br />Vice President of R&D<br/><a href="/contact?contact=Bruce Clayton">contact</a></p>
+                                <p><b>Bruce Clayton</b><br />Security Sales Consultant<br/><a href="/contact?contact=Bruce Clayton">contact</a></p>
                             </div>
                         </div>
                 <hr>
