--- a/school-districts.html
+++ b/school-districts.html
@@ -131,12 +131,14 @@
                     >Security and Safety</a
                   >
                 </li>
+                <li><a href="partners.html" title="Partners and Certifications" >Partners-Certifications</a></li>
               </ul>
             </div>
           </div>
 
           <div class="col-sm-8">
             <h4><small>Preferred Vendor for California Schools</small></h4>
+            <p><img class="img-resp" src="images\teltec-gsabanner-schools.jpg" alt="" /></p>
             <p>
               Tel-Tec Security Systems, Inc. supports more California School
               Districts than any other security company with a Government
