--- a/security-safety.html
+++ b/security-safety.html
@@ -131,6 +131,7 @@
                     >Security and Safety</a
                   >
                 </li>
+                <li><a href="partners.html" title="Partners and Certifications" >Partners-Certifications</a></li>
               </ul>
             </div>
           </div>
