--- a/header.html
+++ b/header.html
@@ -11,23 +11,27 @@
                     <a class="nav-link" href="../../index.html">Home</a>
                 </li>
                 <li class="nav-item dropdown dropdown-slide">
-                    <a class="nav-link" href="https://www.tel-tec.com/contact" data-toggle="dropdown">Commercial
+                    <a class="nav-link" href="commercial-business.html">Commercial
                         <span><i class="ti-angle-down"></i></span>
                     </a>
                     <!-- Dropdown list -->
                     <div class="dropdown-menu">
+                        <a class="dropdown-item" href="industrial-business.html">Industrial</a>
                         <a class="dropdown-item" href="education.html">Education</a>
                         <a class="dropdown-item" href="healthcare.html">Healthcare</a>
+                        <a class="dropdown-item" href="oil-petroleum.html">Oil/Petroleum</a>
                         <a class="dropdown-item" href="#">Energy</a>
                         <a class="dropdown-item" href="agriculture.html">Agriculture</a>
-                        <a class="dropdown-item" href="#">DIY</a>
+                        <a class="dropdown-item" href="construction.html">Construction</a>
+                        <a class="dropdown-item" href="financing.html">Financing Program</a>
+                        <!-- <a class="dropdown-item" href="#">DIY</a> -->
                     </div>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="home-security.html">Residential</a>
                 </li>
                 <li class="nav-item dropdown dropdown-slide">
-                    <a class="nav-link" href="https://www.tel-tec.com/contact" data-toggle="dropdown">Monitoring
+                    <a class="nav-link" href="home-security.html">Monitoring
                         <span><i class="ti-angle-down"></i></span>
                     </a>
                     <!-- Dropdown list -->
@@ -37,16 +41,16 @@
                     </div>
                 </li>
                 <li class="nav-item dropdown dropdown-slide">
-                    <a class="nav-link" href="https://www.tel-tec.com/contact" data-toggle="dropdown">Government
+                    <a class="nav-link" href="government.html">Government
                         <span><i class="ti-angle-down"></i></span>
                     </a>
                     <!-- Dropdown list -->
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="government.html">Government</a>
                         <a class="dropdown-item" href="solutions.html">Solutions</a>
                         <a class="dropdown-item" href="contract-vehicles.html">Contract Vehicles</a>
                         <a class="dropdown-item" href="school-districts.html">School Districts</a>
                         <a class="dropdown-item" href="security-safety.html">Security and Safety</a>
+                        <a class="dropdown-item" href="partners.html">Partners and Certifications</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown dropdown-slide">
@@ -56,7 +60,6 @@
                     <!-- Dropdown list -->
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="contact.html">Contact Us</a>
-                        <a class="dropdown-item" href="about-us.html">About Us</a>
                         <a class="dropdown-item" href="leadership.html">Leadership</a>
                         <a class="dropdown-item" href="sales-team.html">Sales Team</a>
                         <a class="dropdown-item" href="community.html">Serving Community</a>
@@ -129,23 +132,38 @@
                 <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item dropdown dropdown-slide">
-                <a class="nav-link" href="https://www.tel-tec.com/contact" data-toggle="dropdown">Commercial
+                <a class="nav-link" href="about-us.html">About Us
                     <span><i class="ti-angle-down"></i></span>
                 </a>
                 <!-- Dropdown list -->
                 <div class="dropdown-menu">
+                    <a class="dropdown-item" href="our-history.html">Our History</a>
+                    <a class="dropdown-item" href="community.html">Serving Community</a>
+                    <a class="dropdown-item" href="associations.html">Associations</a>
+                    <a class="dropdown-item" href="guarantee.html">Customer Guarantee</a>
+                </div>
+            </li>
+            <li class="nav-item dropdown dropdown-slide">
+                <a class="nav-link" href="commercial-business.html">Commercial
+                    <span><i class="ti-angle-down"></i></span>
+                </a>
+                <!-- Dropdown list -->
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="industrial-business.html">Industrial</a>
                     <a class="dropdown-item" href="education.html">Education</a>
                     <a class="dropdown-item" href="healthcare.html">Healthcare</a>
+                    <a class="dropdown-item" href="oil-petroleum.html">Oil/Petroleum</a>
                     <a class="dropdown-item" href="#">Energy</a>
                     <a class="dropdown-item" href="agriculture.html">Agriculture</a>
-                    <a class="dropdown-item" href="#">DIY</a>
+                    <a class="dropdown-item" href="financing.html">Financing Program</a>
+                    <!-- <a class="dropdown-item" href="#">DIY</a> -->
                 </div>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="home-security.html">Residential</a>
             </li>
             <li class="nav-item dropdown dropdown-slide">
-                <a class="nav-link" href="https://www.tel-tec.com/contact" data-toggle="dropdown">Monitoring
+                <a class="nav-link" href="home-security.html">Monitoring
                     <span><i class="ti-angle-down"></i></span>
                 </a>
                 <!-- Dropdown list -->
@@ -155,38 +173,33 @@
                 </div>
             </li>
             <li class="nav-item dropdown dropdown-slide">
-                <a class="nav-link" href="https://www.tel-tec.com/contact" data-toggle="dropdown">Government
+                <a class="nav-link" href="government.html">Government
                     <span><i class="ti-angle-down"></i></span>
                 </a>
                 <!-- Dropdown list -->
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" href="government.html">Government</a>
                     <a class="dropdown-item" href="solutions.html">Solutions</a>
                     <a class="dropdown-item" href="contract-vehicles.html">Contract Vehicles</a>
                     <a class="dropdown-item" href="school-districts.html">School Districts</a>
                     <a class="dropdown-item" href="security-safety.html">Security and Safety</a>
+                    <a class="dropdown-item" href="partners.html">Partners and Certifications</a>
                 </div>
             </li>
             <li class="nav-item dropdown dropdown-slide">
-                <a class="nav-link" href="https://www.tel-tec.com/contact" data-toggle="dropdown">Contact Us
+                <a class="nav-link" href="contact.html">Contact Us
                     <span><i class="ti-angle-down"></i></span>
                 </a>
                 <!-- Dropdown list -->
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" href="contact.html">Contact Us</a>
-                    <a class="dropdown-item" href="about-us.html">About Us</a>
                     <a class="dropdown-item" href="leadership.html">Leadership</a>
                     <a class="dropdown-item" href="sales-team.html">Sales Team</a>
-                    <a class="dropdown-item" href="community.html">Serving Community</a>
-                    <a class="dropdown-item" href="associations.html">Associations</a>
-                    <a class="dropdown-item" href="guarantee.html">Customer Guarantee</a>
                 </div>
             </li>
         </ul>
 
         <ul class="navbar-nav ml-auto">
             <li class="nav-item dropdown dropdown-slide">
-                <a class="nav-link" href="https://www.tel-tec.com/myaccount/" style="font-size: 16px;">My Account</a>
+                <a class="nav-link" href="https://www.tel-tec.com/myaccount/" style="font-size: 14px;">My Account</a>
             </li>
         </ul>
     </div>
