--- a/index.html
+++ b/index.html
@@ -46,8 +46,216 @@
 <body class="body-wrapper" data-spy="scroll" data-target=".privacy-nav">
 
 	<!-- Header navigation -->
-	<header></header>
-
+	<!-- <header></header> -->
+	<nav class="navbar main-nav navbar-expand-lg p-0">
+		<div class="container">
+			<a class="navbar-brand" href="../../index.html"><img height="100" src="../images\Tel-Tec Logo v2016-web.png" alt="logo"></a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="ti-menu"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav">
+					<li class="nav-item dropdown dropdown-slide">
+						<a class="nav-link" href="../../index.html">Home</a>
+					</li>
+					<li class="nav-item dropdown dropdown-slide">
+						<a class="nav-link" href="commercial-business.html">Commercial
+							<span><i class="ti-angle-down"></i></span>
+						</a>
+						<!-- Dropdown list -->
+						<div class="dropdown-menu">
+							<a class="dropdown-item" href="industrial-business.html">Industrial</a>
+							<a class="dropdown-item" href="education.html">Education</a>
+							<a class="dropdown-item" href="healthcare.html">Healthcare</a>
+							<a class="dropdown-item" href="oil-petroleum.html">Oil/Petroleum</a>
+							<a class="dropdown-item" href="#">Energy</a>
+							<a class="dropdown-item" href="agriculture.html">Agriculture</a>
+							<a class="dropdown-item" href="construction.html">Construction</a>
+							<a class="dropdown-item" href="financing.html">Financing Program</a>
+							<!-- <a class="dropdown-item" href="#">DIY</a> -->
+						</div>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="home-security.html">Residential</a>
+					</li>
+					<li class="nav-item dropdown dropdown-slide">
+						<a class="nav-link" href="home-security.html">Monitoring
+							<span><i class="ti-angle-down"></i></span>
+						</a>
+						<!-- Dropdown list -->
+						<div class="dropdown-menu">
+							<a class="dropdown-item" href="home-security.html">Residential</a>
+							<a class="dropdown-item" href="commercial.html">Commercial</a>
+						</div>
+					</li>
+					<li class="nav-item dropdown dropdown-slide">
+						<a class="nav-link" href="government.html">Government
+							<span><i class="ti-angle-down"></i></span>
+						</a>
+						<!-- Dropdown list -->
+						<div class="dropdown-menu">
+							<a class="dropdown-item" href="solutions.html">Solutions</a>
+							<a class="dropdown-item" href="contract-vehicles.html">Contract Vehicles</a>
+							<a class="dropdown-item" href="school-districts.html">School Districts</a>
+							<a class="dropdown-item" href="security-safety.html">Security and Safety</a>
+							<a class="dropdown-item" href="partners.html">Partners and Certifications</a>
+						</div>
+					</li>
+					<li class="nav-item dropdown dropdown-slide">
+						<a class="nav-link" href="https://www.tel-tec.com/contact" data-toggle="dropdown">Contact Us
+							<span><i class="ti-angle-down"></i></span>
+						</a>
+						<!-- Dropdown list -->
+						<div class="dropdown-menu">
+							<a class="dropdown-item" href="contact.html">Contact Us</a>
+							<a class="dropdown-item" href="leadership.html">Leadership</a>
+							<a class="dropdown-item" href="sales-team.html">Sales Team</a>
+							<a class="dropdown-item" href="community.html">Serving Community</a>
+							<a class="dropdown-item" href="associations.html">Associations</a>
+							<a class="dropdown-item" href="guarantee.html">Customer Guarantee</a>
+						</div>
+					</li>
+				</ul>
+	
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item dropdown dropdown-slide">
+						<a class="nav-link" href="https://www.tel-tec.com/myaccount/" style="font-size: 16px;">My Account</a>
+					</li>
+				</ul>
+			</div>
+			
+		</div>
+	
+		
+		<!-- <div class="col-lg-12" style="text-align: center;">
+			<p><bold>Call us:</bold> 818-923-2629</p>
+			<h3 style="font-weight: 700;">Covid-19 Pandemic Best Practices</h3>
+		</div> -->
+	
+		<!-- center side end -->
+		<div class="col-12 text-center col-md-4 top-row-right pt-2 social">
+			<span class="d-block d-lg-none phone-section">Call Us: <a href="tel:661-397-5511">661-397-5511</a></span>
+			<ul class="pl-0" style="
+			list-style: none;
+			display: flex;
+			justify-content: center;
+		">
+				<li>
+					<a href="https://www.linkedin.com/company/tel-tec-security-systems-inc"><i class="fab fa-linkedin"></i></a>
+				</li>
+				<li>
+					<a href=""><i class="fas fa-rss-square"></i></a>
+				</li>
+				<li>
+					<a href="https://www.youtube.com/channel/UCcUCiKVfGnmZckFtEZKxvJQ"><i class="fab fa-youtube"></i></a>
+				</li>
+				<li>
+					<a href="https://www.facebook.com/teltec"><i class="fab fa-facebook-square"></i></a>
+				</li>
+				<li>
+					<a href="https://www.instagram.com/teltecsecurityinc/"><i class="fab fa-instagram"></i></a>
+				</li>	
+			</ul>
+		</div>
+	
+		<div class="col-lg-12" style="text-align: center;">
+			<a href="covid-19.html"><h3 style="font-weight: 400; font-size: small;">Covid-19 Pandemic Best Practices</h3></a>
+		</div>
+	
+	
+	</nav>
+	<!--==================================
+	=            Hero Section            =
+	===================================-->
+	<nav class="navbar main-nav navbar-expand-lg p-0">
+	<div class="container">
+		<a class="navbar-brand" href="index.html"><img height="100" src="../images\Tel-Tec Logo v2016-web.png" alt="logo"></a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+			aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="ti-menu"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNav">
+			<ul class="navbar-nav">
+				<li class="nav-item dropdown dropdown-slide">
+					<a class="nav-link" href="index.html">Home</a>
+				</li>
+				<li class="nav-item dropdown dropdown-slide">
+					<a class="nav-link" href="about-us.html">About Us
+						<span><i class="ti-angle-down"></i></span>
+					</a>
+					<!-- Dropdown list -->
+					<div class="dropdown-menu">
+						<a class="dropdown-item" href="our-history.html">Our History</a>
+						<a class="dropdown-item" href="community.html">Serving Community</a>
+						<a class="dropdown-item" href="associations.html">Associations</a>
+						<a class="dropdown-item" href="guarantee.html">Customer Guarantee</a>
+					</div>
+				</li>
+				<li class="nav-item dropdown dropdown-slide">
+					<a class="nav-link" href="commercial-business.html">Commercial
+						<span><i class="ti-angle-down"></i></span>
+					</a>
+					<!-- Dropdown list -->
+					<div class="dropdown-menu">
+						<a class="dropdown-item" href="industrial-business.html">Industrial</a>
+						<a class="dropdown-item" href="education.html">Education</a>
+						<a class="dropdown-item" href="healthcare.html">Healthcare</a>
+						<a class="dropdown-item" href="oil-petroleum.html">Oil/Petroleum</a>
+						<a class="dropdown-item" href="#">Energy</a>
+						<a class="dropdown-item" href="agriculture.html">Agriculture</a>
+						<a class="dropdown-item" href="financing.html">Financing Program</a>
+						<!-- <a class="dropdown-item" href="#">DIY</a> -->
+					</div>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="home-security.html">Residential</a>
+				</li>
+				<li class="nav-item dropdown dropdown-slide">
+					<a class="nav-link" href="home-security.html">Monitoring
+						<span><i class="ti-angle-down"></i></span>
+					</a>
+					<!-- Dropdown list -->
+					<div class="dropdown-menu">
+						<a class="dropdown-item" href="home-security.html">Residential</a>
+						<a class="dropdown-item" href="commercial.html">Commercial</a>
+					</div>
+				</li>
+				<li class="nav-item dropdown dropdown-slide">
+					<a class="nav-link" href="government.html">Government
+						<span><i class="ti-angle-down"></i></span>
+					</a>
+					<!-- Dropdown list -->
+					<div class="dropdown-menu">
+						<a class="dropdown-item" href="solutions.html">Solutions</a>
+						<a class="dropdown-item" href="contract-vehicles.html">Contract Vehicles</a>
+						<a class="dropdown-item" href="school-districts.html">School Districts</a>
+						<a class="dropdown-item" href="security-safety.html">Security and Safety</a>
+						<a class="dropdown-item" href="partners.html">Partners and Certifications</a>
+					</div>
+				</li>
+				<li class="nav-item dropdown dropdown-slide">
+					<a class="nav-link" href="contact.html">Contact Us
+						<span><i class="ti-angle-down"></i></span>
+					</a>
+					<!-- Dropdown list -->
+					<div class="dropdown-menu">
+						<a class="dropdown-item" href="leadership.html">Leadership</a>
+						<a class="dropdown-item" href="sales-team.html">Sales Team</a>
+					</div>
+				</li>
+			</ul>
+	
+			<ul class="navbar-nav ml-auto">
+				<li class="nav-item dropdown dropdown-slide">
+					<a class="nav-link" href="https://www.tel-tec.com/myaccount/" style="font-size: 14px;">My Account</a>
+				</li>
+			</ul>
+		</div>
+		
+	</div>
+	
+	</nav>
 
 
 	<!--==================================
@@ -114,7 +322,7 @@
 				<div class="col-lg-4 col-md-6">
 					<a href="commercial.html">
 						<div class='img-container'>
-						<img src="images/commercial.jpg" alt="Commercial security" />
+						<img src="images/commercial-3x2.jpg" alt="Commercial security" />
 						<div class='img-footer'>
 							<p class="image-text">Commercial</p>
 						</div>
@@ -124,7 +332,7 @@
 				<div class="col-lg-4 col-md-6">
 					<a href="healthcare.html">
 						<div class='img-container'>
-						<img src="images/health.jpg" alt="health care security" />
+						<img src="images/healthcare-3x2.jpg" alt="health care security" />
 						<div class='img-footer'>
 							<p class="image-text">Health Care</p>
 						</div>
@@ -134,7 +342,7 @@
 				<div class="col-lg-4 col-md-6">
 					<a href="agriculture.html">
 						<div class='img-container'>
-						<img src="images/agriculture.jpg" alt="agriculture security" />
+						<img src="images/Agricultureadele-payman-3x2.jpg" alt="agriculture security" />
 						<div class='img-footer'>
 							<p class="image-text">Agriculture</p>
 						</div>
@@ -144,7 +352,7 @@
 				<div class="col-lg-4 col-md-6">
 					<a href="education.html">
 						<div class='img-container'>
-						<img src="images/education.jpg" alt="education security" />
+						<img src="images/education-3x2.jpg" alt="education security" />
 						<div class='img-footer'>
 							<p class="image-text">Education</p>
 						</div>
@@ -154,7 +362,7 @@
 				<div class="col-lg-4 col-md-6">
 					<a href="#">
 						<div class='img-container'>
-						<img src="images/diy.jpg" alt="do it yourself security" />
+						<img src="images/DIY-3x2.jpg" alt="do it yourself security" />
 						<div class='img-footer'>
 							<p class="image-text">DIY</p>
 						</div>
@@ -164,7 +372,7 @@
 				<div class="col-lg-4 col-md-6">
 					<a href="government.html">
 						<div class='img-container'>
-						<img src="images/government.jpg" alt="government security" />
+						<img src="images/Government-3x2.jpg" alt="government security" />
 						<div class='img-footer'>
 							<p class="image-text">Government</p>
 						</div>
@@ -174,7 +382,7 @@
 				<div class="col-lg-4 col-md-6">
 					<a href="#">
 						<div class='img-container'>
-						<img src="images/energy.jpg" alt="energy systems security" />
+						<img src="images/energy-3x2.jpg" alt="energy systems security" />
 						<div class='img-footer'>
 							<p class="image-text">Energy</p>
 						</div>
@@ -184,7 +392,7 @@
 				<div class="col-lg-4 col-md-6">
 					<a href="home-security.html">
 						<div class='img-container'>
-						<img src="images/residential.jpg" alt="residential security" />
+						<img src="images/residential-3x2.jpg" alt="residential security" />
 						<div class='img-footer'>
 							<p class="image-text">Residential Monitoring</p>
 						</div>	
@@ -193,7 +401,7 @@
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<a href="commercial.html"><div class='img-container'>
-						<img src="images/monitoring.jpg" alt="monitoring security" />
+						<img src="images/commercial-map-3x2.jpg" alt="monitoring security" />
 						<div class='img-footer'>
 							<p class="image-text">Commercial Monitoring</p>
 						</div>
@@ -203,53 +411,122 @@
 		</div>
 	</section>
 
-	<!-- <section class="mt-4">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-3 col-6 text-center mb-3">
-					<img src="images/home/cms.png" alt="cms security">
-				</div>
-
-				<div class="col-lg-3 col-6 text-center mb-3">
-					<img src="images/home/cmas.png" alt="cmas security">
-				</div>
-
-				<div class="col-lg-3 col-6 text-center mb-3">
-					<img src="images/home/gsa.png" alt="gsa security">
-				</div>
-
-				<div class="col-lg-3 col-6 text-center mb-3">
-					<a href="https://www.bbb.org/us/ca/bakersfield/profile/burglar-alarm-systems/tel-tec-security-systems-inc-1066-80000799"><img src="images/home/bbb.png" alt="security made easy"></a>
-				</div>
-			</div>
-		</div>
-	</section> -->
-
 	<!--==============================
 =            Footer          =
 ===============================-->
 
-<footer class="page-footer font-small blue pt-4"></footer>
+<!-- <footer class="page-footer font-small blue pt-4"></footer> -->
+<footer class="page-footer font-small blue pt-4">
 
-	<script>
-		fetch("./header.html")
-		.then(response => {
-			return response.text()
-		})
-		.then(data => {
-			document.querySelector("header").innerHTML = data;
-		});
-	</script>
+	<!-- Footer Links -->
+	<div class="container-fluid text-center text-md-left footer-container">
+  
+	  <!-- Grid row -->
+	  <div class="row">
+  
+		<!-- Grid column -->
+		
+		<!-- Grid column -->
+  
+		<hr class="clearfix w-100 d-md-none pb-3">
+  
+		<!-- Grid column -->
+		<div class="col-md-3 mb-md-0 mb-3">
+  
+		  <!-- Links -->
+		  <!-- <h5 class="text-uppercase">Links</h5> -->
+  
+		  <ul class="list-unstyled footer-link">
+			<li>
+			  <a href="careers.html">Careers</a>
+			</li>
+			<li>
+			  <a href="sitemap.html">Site map</a>
+			</li>
+			<li>
+			  <a href="privacy.html">Privacy</a>
+			</li>
+			<!-- <li>
+			  <a href="#!">Link 4</a>
+			</li> -->
+		  </ul>
+  
+		</div>
+		<!-- Grid column -->
+  
+		<!-- Grid column -->
+		<div class="col-md-3 mb-md-0 mb-3">
+  
+		  <!-- Links -->
+		  <!-- <h5 class="text-uppercase">Links</h5> -->
+  
+		  <ul class="list-unstyled footer-link">
+			<li>
+			  <a href="terms-of-use.html">Terms of Use</a>
+			</li>
+			<li>
+			  <a href="contact.html">Contact us</a>
+			</li>
+			<li>
+			  <a href="financing.html">Financing</a>
+			</li>
+			<!-- <li>
+			  <a href="#!">Link 4</a>
+			</li> -->
+		  </ul>
+  
+		</div>
+		<!-- Grid column -->
+  
+		<div class="col-md-6 mt-md-0 mt-3">
+  
+			<!-- Content -->
+			<div class="footer-content">
+			<h5 class="text-uppercase">Need Help?</h5>
+			<p>We're available 24/7 at 1-661-397-5511</p>
+			</div>
+
+			<div class="container">
+			<div class="row footer-icon">
+			  <div class="col-lg-2 col-6 text-center mb-3">
+				  <img src="images/cms.png" alt="">
+			  </div>
+
+			  <div class="col-lg-2 col-6 text-center mb-3">
+				<img src="images/voip-trans-footer.png" alt="">
+			  </div>
+  
+			  <div class="col-lg-2 col-6 text-center mb-3">
+				  <img src="images/CMAS-trans-footer.png" alt="">
+			  </div>
+  
+			  <div class="col-lg-2 col-6 text-center mb-3">
+				  <img src="images/GSA-logo-trans-footer.png" alt="">
+			  </div>
+  
+			  <div class="col-lg-2 col-6 text-center mb-3">
+				  <a href="https://www.bbb.org/us/ca/bakersfield/profile/burglar-alarm-systems/tel-tec-security-systems-inc-1066-80000799"><img src="images/bbb.png" alt=""></a>
+			  </div>
+		  </div>
+		  </div>
 	
-	<script>
-		fetch("./footer.html")
-		.then(response => {
-		return response.text()
-		})
-		.then(data => {
-		document.querySelector("footer").innerHTML = data;
-		});
-	</script>
+		  </div>
+
+	  </div>
+	  <!-- Grid row -->
+  
+	</div>
+	<!-- Footer Links -->
+  
+	<!-- Copyright -->
+	<div class="footer-copyright text-center py-3">© 2020 Copyright: Tel-Tec Security Systems, Inc. All Rights Reserved
+	  <!-- <a href="https://mdbootstrap.com/"> MDBootstrap.com</a> -->
+	</div>
+	<!-- Copyright -->
+  
+  </footer>
+  <!-- Footer -->
+
 
 	<!-- JAVASCRIPTS -->
 	<script src="plugins/jquery/jquery.js"></script>
