--- a/solutions.html
+++ b/solutions.html
@@ -95,9 +95,9 @@
 						<li><a href="contract-vehicles.html" title="Contract Vehicles" >Contract Vehicles</a></li>
 						<li><a href="school-districts.html" title="California School Districts" >School Districts</a></li>
 						<li><a href="security-safety.html" title="Security and Safety" >Security and Safety</a></li>
-						<!-- <li><a href="../government/partners" title="Partners and Certifications" >Partners-Certifications</a></li> -->
+						<li><a href="partners.html" title="Partners and Certifications" >Partners-Certifications</a></li>
 					</ul>
-				</div>
+				  </div>
                
               </div>
           
