--- a/header.html
+++ b/header.html
@@ -11,6 +11,18 @@
                     <a class="nav-link" href="../../index.html">Home</a>
                 </li>
                 <li class="nav-item dropdown dropdown-slide">
+                    <a class="nav-link" href="about-us.html">About Us
+                        <span><i class="ti-angle-down"></i></span>
+                    </a>
+                    <!-- Dropdown list -->
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="our-history.html">Our History</a>
+                        <a class="dropdown-item" href="community.html">Serving Community</a>
+                        <a class="dropdown-item" href="associations.html">Associations</a>
+                        <a class="dropdown-item" href="guarantee.html">Customer Guarantee</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown dropdown-slide">
                     <a class="nav-link" href="commercial-business.html">Commercial
                         <span><i class="ti-angle-down"></i></span>
                     </a>
@@ -54,17 +66,13 @@
                     </div>
                 </li>
                 <li class="nav-item dropdown dropdown-slide">
-                    <a class="nav-link" href="https://www.tel-tec.com/contact" data-toggle="dropdown">Contact Us
+                    <a class="nav-link" href="contact.html">Contact Us
                         <span><i class="ti-angle-down"></i></span>
                     </a>
                     <!-- Dropdown list -->
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="contact.html">Contact Us</a>
                         <a class="dropdown-item" href="leadership.html">Leadership</a>
                         <a class="dropdown-item" href="sales-team.html">Sales Team</a>
-                        <a class="dropdown-item" href="community.html">Serving Community</a>
-                        <a class="dropdown-item" href="associations.html">Associations</a>
-                        <a class="dropdown-item" href="guarantee.html">Customer Guarantee</a>
                     </div>
                 </li>
             </ul>
@@ -155,6 +163,7 @@
                     <a class="dropdown-item" href="oil-petroleum.html">Oil/Petroleum</a>
                     <a class="dropdown-item" href="#">Energy</a>
                     <a class="dropdown-item" href="agriculture.html">Agriculture</a>
+                    <a class="dropdown-item" href="construction.html">Construction</a>
                     <a class="dropdown-item" href="financing.html">Financing Program</a>
                     <!-- <a class="dropdown-item" href="#">DIY</a> -->
                 </div>
